RESOLVED FIXED173361
[Win] DRT should not use disk cache.
https://bugs.webkit.org/show_bug.cgi?id=173361
Summary [Win] DRT should not use disk cache.
Per Arne Vollan
Reported 2017-06-14 03:55:49 PDT
Like on macOS/iOS, DRT on Windows should only use memory cache.
Attachments
Patch (2.07 KB, patch)
2017-06-14 03:57 PDT, Per Arne Vollan
darin: review+
Per Arne Vollan
Comment 1 2017-06-14 03:57:41 PDT
Darin Adler
Comment 2 2017-06-14 07:37:20 PDT
Comment on attachment 312883 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=312883&action=review > Tools/DumpRenderTree/win/DumpRenderTree.cpp:1469 > + RetainPtr<CFURLCacheRef> newCache = adoptCF(CFURLCacheCreate(kCFAllocatorDefault, 1024 * 1024, 0, nullptr)); I suggest using auto here, or just putting this inside the function call.
Per Arne Vollan
Comment 3 2017-06-14 07:52:14 PDT
(In reply to Darin Adler from comment #2) > Comment on attachment 312883 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=312883&action=review > > > Tools/DumpRenderTree/win/DumpRenderTree.cpp:1469 > > + RetainPtr<CFURLCacheRef> newCache = adoptCF(CFURLCacheCreate(kCFAllocatorDefault, 1024 * 1024, 0, nullptr)); > > I suggest using auto here, or just putting this inside the function call. Thanks for reviewing! I will update the patch before landing.
Per Arne Vollan
Comment 4 2017-06-14 07:58:28 PDT
Basuke Suzuki
Comment 5 2018-07-26 15:44:56 PDT
Per Arne, What is the source of this decision? We have an cache implementation in WebKitLegacy and wanna test it. So I am very curious what causes this patch.
Per Arne Vollan
Comment 6 2018-07-31 09:26:43 PDT
(In reply to Basuke Suzuki from comment #5) > Per Arne, > What is the source of this decision? We have an cache implementation in > WebKitLegacy and wanna test it. So I am very curious what causes this patch. I believe we turned off the disk cache because macOS turned it off. You can probably enable it for WinCairo to test the cache implementation.
Basuke Suzuki
Comment 7 2018-07-31 12:45:49 PDT
(In reply to Per Arne Vollan from comment #6) > (In reply to Basuke Suzuki from comment #5) > > Per Arne, > > What is the source of this decision? We have an cache implementation in > > WebKitLegacy and wanna test it. So I am very curious what causes this patch. Can you check AppleWin support disk cache or not? Does CFNetwork itself has disk cache feature? I guess that's why there's no need to test'em explicitly with DRT. > I believe we turned off the disk cache because macOS turned it off. You can > probably enable it for WinCairo to test the cache implementation. Yes, we are thinking about that. The code was old and we don't currently maintain them well, but without test, we can't touch them.
Note You need to log in before you can comment on or make changes to this bug.