[Win] DRT should not use disk cache. https://bugs.webkit.org/show_bug.cgi?id=173361

Reviewed by Darin Adler.

Like on macOS/iOS, DRT on Windows should only use memory cache.

* DumpRenderTree/win/DumpRenderTree.cpp:
(setDefaultsToConsistentValuesForTesting):
(prepareConsistentTestingEnvironment):


Canonical link: https://commits.webkit.org/190231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218255 268f45cc-cd09-0410-ab3c-d52691b4dbfc